--- a/static/index.html
+++ b/static/index.html
@@ -1,149 +1,70 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by Pixelarity
-	pixelarity.com | hello@pixelarity.com
-	License: pixelarity.com/license
--->
+
 <html>
+	<head>
+		<title>Clear-Energy</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body id="top">
 
-<head>
-	<title>1 plek voor alle mandaten</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-</head>
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
 
-<body>
-	<!-- Wrapper -->
-	<div id="wrapper">
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="index.html">Clear-Energy  <span>by Energy! at the Blockchain Hackathon</span></a></h1>
+					</header>
 
-		<!-- Header -->
-		<header id="header">
-			<div class="inner">
+				<!-- Main -->
+					<div id="main">
 
-				<!-- Logo -->
-				<a href="index.html" class="logo">
-					<span class="symbol"><img src="images/stamp.svg" alt="" /></span><span class="title">Mandaten.nl</span>
-				</a>
+						<!-- Banner -->
+							<section id="banner">
+								<header>
+									<h2>WELCOME TO CLEAR-ENERGY</h2>
+									<p>WE WILL GIVE YOU THE INSIGHTS TO CHANGE THE WORLD!</p>
+								</header>
+								<footer>
+									<ul class="actions">
+										<li><a href="#" class="button big">Demo Coming Soon</a></li>
+									</ul>
+								</footer>
+							</section>
 
-				<!-- Nav -->
-				<nav>
-					<ul>
-						<li><a href="#menu">Menu</a></li>
-					</ul>
-				</nav>
+					</div>
+
+
+				<!-- Footer -->
+					<section id="footer">
+						<div class="inner">
+							<section>
+								<h3>Get in Touch</h3>
+								<ul class="contact">
+									<a href="mailto:info@clear-energy.nl"><li class="fa-envelope"></li></a>
+									<a href="https://twitter.com/clear_energy_" target="_blank"><li class="fa-twitter"></li></a>
+									<a href="https://www.facebook.com/Clear-Energy-150764052098829/" target="_blank"><li class="fa-facebook"></li></a>
+									<a href="https://github.com/DBH17-Energy/clear-energy" target="_blank"><li class="fa-github"></li></a>
+								</ul>
+							</section>
+						</div>
+						<div class="copyright">
+							<p>Copyright &copy; Energy! All rights reserved.</p>
+						</div>
+					</section>
 
 			</div>
-		</header>
 
-		<!-- Menu -->
-		<nav id="menu">
-			<h2>Menu</h2>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="generic.html">Ipsum veroeros</a></li>
-				<li><a href="generic.html">Tempus etiam</a></li>
-				<li><a href="generic.html">Consequat dolor</a></li>
-				<li><a href="elements.html">Elements</a></li>
-			</ul>
-		</nav>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
 
-		<!-- Main -->
-		<div id="main">
-			<div class="inner">
-				<header>
-					<h1 class="pull-left"><em>"opdracht die je van anderen krijgt om namens hen iets voor elkaar te krijgen"</em></h1>
-					<p class="pull-right">[man'dat] man|daten (meerv.)</p>
-				</header>
-				<section>
-					<span class="image main"><img src="images/pen.jpg" alt="" /></span>
-					<p>Jouw persoonlijke gegevens worden elke dag door veel verschillende bedrijven gebruikt. Voor inzicht en optimalisering,
-						maar ook voor marketing en vergelijkingen. Dit mag niet zonder toestemming natuurlijk, maar heb je die wel gegeven?
-						En voor welk doeleinde?</p>
-					<p>Er is voor bedrijven en consumenten een groeiende behoefte aan inzicht in deze mandaten. Bekijk de verschillende sectoren
-						hieronder voor de mandaten en inzichten.</p>
-				</section>
-
-				<section class="tiles">
-					<article class="style4">
-						<span class="image"><img src="images/light.jpg" alt="" /></span>
-						<a href="generic.html">
-							<h2>Energie</h2>
-							<div class="content">
-								<p>Bekijk waar jouw stook- en verbruiks-gegevens voor gebruikt worden.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style3">
-						<span class="image"><img src="images/money.jpg" alt="" /></span>
-						<a href="generic.html">
-							<h2>Banken</h2>
-							<div class="content">
-								<p>Bekijk waar jouw financiele gegevens voor gebruikt worden.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style1">
-						<span class="image"><img src="images/phone.jpg" alt="" /></span>
-						<a href="generic.html">
-							<h2>Telecom</h2>
-							<div class="content">
-								<p>Bekijk waar gegevens van jouw belgedrag en internetgebruik voor gebruikt worden.</p>
-							</div>
-						</a>
-					</article>
-				</section>
-			</div>
-		</div>
-
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<section>
-					<h2>Stuur ons een bericht</h2>
-					<form method="post" action="#">
-						<div class="field half first">
-							<input type="text" name="name" id="name" placeholder="Naam" />
-						</div>
-						<div class="field half">
-							<input type="email" name="email" id="email" placeholder="Email" />
-						</div>
-						<div class="field">
-							<textarea name="message" id="message" placeholder="Bericht"></textarea>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Verstuur" class="special" /></li>
-						</ul>
-					</form>
-				</section>
-				<section>
-					<h2>Blijf op de hoogte</h2>
-					<ul class="icons">
-						<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-						<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-				</section>
-				<ul class="copyright">
-					<li>&copy; Stichting Beter Inzicht Datagebruik. Alle rechten voorbehouden.</li>
-				</ul>
-			</div>
-		</footer>
-
-	</div>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="assets/js/main.js"></script>
-
-</body>
-
+	</body>
 </html>
